// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test adding custom config 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aArtifactHashAC75D432": Object {
      "Description": "Artifact hash for asset \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3Bucket85FCB745": Object {
      "Description": "S3 bucket for asset \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713": Object {
      "Description": "S3 key for asset version \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParametersb50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fbArtifactHash4FB11DC7": Object {
      "Description": "Artifact hash for asset \\"b50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fb\\"",
      "Type": "String",
    },
    "AssetParametersb50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fbS3Bucket238E2B75": Object {
      "Description": "S3 bucket for asset \\"b50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fb\\"",
      "Type": "String",
    },
    "AssetParametersb50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fbS3VersionKey3FE4C2C4": Object {
      "Description": "S3 key for asset version \\"b50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fb\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "TestConfigDFE7B72C": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "nodejs14.x",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersb50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fbS3Bucket238E2B75",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersb50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fbS3VersionKey3FE4C2C4",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersb50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fbS3VersionKey3FE4C2C4",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "TestConfigPythonLibLayer672F8799": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "python3.8",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3Bucket85FCB745",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
  },
}
`;

exports[`visting node lambda runtimes and adding aspects 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters3ff8148af7e7d743d252071c60bc405fdb852cd6261591a5c891f71ed774d6f7ArtifactHash9B8817AF": Object {
      "Description": "Artifact hash for asset \\"3ff8148af7e7d743d252071c60bc405fdb852cd6261591a5c891f71ed774d6f7\\"",
      "Type": "String",
    },
    "AssetParameters3ff8148af7e7d743d252071c60bc405fdb852cd6261591a5c891f71ed774d6f7S3Bucket22FF4D32": Object {
      "Description": "S3 bucket for asset \\"3ff8148af7e7d743d252071c60bc405fdb852cd6261591a5c891f71ed774d6f7\\"",
      "Type": "String",
    },
    "AssetParameters3ff8148af7e7d743d252071c60bc405fdb852cd6261591a5c891f71ed774d6f7S3VersionKey32822440": Object {
      "Description": "S3 key for asset version \\"3ff8148af7e7d743d252071c60bc405fdb852cd6261591a5c891f71ed774d6f7\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aArtifactHashAC75D432": Object {
      "Description": "Artifact hash for asset \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3Bucket85FCB745": Object {
      "Description": "S3 bucket for asset \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713": Object {
      "Description": "S3 key for asset version \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParametersb50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fbArtifactHash4FB11DC7": Object {
      "Description": "Artifact hash for asset \\"b50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fb\\"",
      "Type": "String",
    },
    "AssetParametersb50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fbS3Bucket238E2B75": Object {
      "Description": "S3 bucket for asset \\"b50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fb\\"",
      "Type": "String",
    },
    "AssetParametersb50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fbS3VersionKey3FE4C2C4": Object {
      "Description": "S3 key for asset version \\"b50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fb\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "testConfigWithNodeDDA76C99": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "nodejs14.x",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersb50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fbS3Bucket238E2B75",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersb50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fbS3VersionKey3FE4C2C4",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersb50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fbS3VersionKey3FE4C2C4",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "python3.8",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3Bucket85FCB745",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": Object {
      "DependsOn": Array [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters3ff8148af7e7d743d252071c60bc405fdb852cd6261591a5c891f71ed774d6f7S3Bucket22FF4D32",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters3ff8148af7e7d743d252071c60bc405fdb852cd6261591a5c891f71ed774d6f7S3VersionKey32822440",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters3ff8148af7e7d743d252071c60bc405fdb852cd6261591a5c891f71ed774d6f7S3VersionKey32822440",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_SDK_USER_AGENT": "{ \\"customUserAgent\\": \\"AwsSolution/undefined/undefined\\" }",
          },
        },
        "Handler": "index.handler",
        "Layers": Array [
          Object {
            "Ref": "testConfigWithNodeDDA76C99",
          },
        ],
        "Role": Object {
          "Fn::GetAtt": Array [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`visting node python runtimes and adding aspects 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters04e248254fb21f804ad809dc99f6acae294828497f5d5ed800b7ff6017c947c2ArtifactHash36772F8E": Object {
      "Description": "Artifact hash for asset \\"04e248254fb21f804ad809dc99f6acae294828497f5d5ed800b7ff6017c947c2\\"",
      "Type": "String",
    },
    "AssetParameters04e248254fb21f804ad809dc99f6acae294828497f5d5ed800b7ff6017c947c2S3Bucket0EF971F9": Object {
      "Description": "S3 bucket for asset \\"04e248254fb21f804ad809dc99f6acae294828497f5d5ed800b7ff6017c947c2\\"",
      "Type": "String",
    },
    "AssetParameters04e248254fb21f804ad809dc99f6acae294828497f5d5ed800b7ff6017c947c2S3VersionKeyADEDF376": Object {
      "Description": "S3 key for asset version \\"04e248254fb21f804ad809dc99f6acae294828497f5d5ed800b7ff6017c947c2\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aArtifactHashAC75D432": Object {
      "Description": "Artifact hash for asset \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3Bucket85FCB745": Object {
      "Description": "S3 bucket for asset \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713": Object {
      "Description": "S3 key for asset version \\"474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0a\\"",
      "Type": "String",
    },
    "AssetParametersb50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fbArtifactHash4FB11DC7": Object {
      "Description": "Artifact hash for asset \\"b50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fb\\"",
      "Type": "String",
    },
    "AssetParametersb50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fbS3Bucket238E2B75": Object {
      "Description": "S3 bucket for asset \\"b50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fb\\"",
      "Type": "String",
    },
    "AssetParametersb50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fbS3VersionKey3FE4C2C4": Object {
      "Description": "S3 key for asset version \\"b50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fb\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "testConfigWithNodeDDA76C99": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "nodejs14.x",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersb50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fbS3Bucket238E2B75",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersb50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fbS3VersionKey3FE4C2C4",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersb50f19ca5603c7add9ca4070ce88275fc239b622a97cd2b9f11f4058374264fbS3VersionKey3FE4C2C4",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "python3.8",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3Bucket85FCB745",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters474cb5834d13ab2d2bfdacf25f8d89ec66953e1fb5a1e70e65c1e93e18413d0aS3VersionKey05D33713",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": Object {
      "DependsOn": Array [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters04e248254fb21f804ad809dc99f6acae294828497f5d5ed800b7ff6017c947c2S3Bucket0EF971F9",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters04e248254fb21f804ad809dc99f6acae294828497f5d5ed800b7ff6017c947c2S3VersionKeyADEDF376",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters04e248254fb21f804ad809dc99f6acae294828497f5d5ed800b7ff6017c947c2S3VersionKeyADEDF376",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_SDK_USER_AGENT": "{ \\"user_agent_extra\\": \\"AwsSolution/undefined/undefined\\" }",
          },
        },
        "Handler": "handler",
        "Layers": Array [
          Object {
            "Ref": "testConfigWithNodePythonLibLayer75C81C17",
          },
        ],
        "Role": Object {
          "Fn::GetAtt": Array [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "python3.8",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
